--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 </head>
 <style>
     body {
-	background-image: linear-gradient(to top, #fad0c4 0%, #ffd1ff 100%);
+    background-image: linear-gradient(to top, #a18cd1 0%, #fbc2eb 100%);  
 	color: #333;
 	font: 100% Lato, Arial, Sans Serif;
 	height: 100vh;
@@ -264,7 +264,7 @@
 #navbar a {
   float: left;
   display: block;
-  color: #add2ef;
+  color: #433ed4;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
@@ -272,7 +272,7 @@
 }
 
 #navbar a:hover {
-  background-color: #53c9de4b;
+  background-color: #429cac4b;
   color: white;
 }
 
@@ -334,7 +334,7 @@ i{
     top: 100%;
     width: 100%;
     height: 100vh;
-    background-color: #fad0c4;
+    background-color: #a18cd1;
     z-index: -1;
 
     color: #f2f2f2;
@@ -398,22 +398,12 @@ i{
 }
 </style>
 <body>
-    <div id="background-wrap">
-        <div class="bubble x1"></div>
-        <div class="bubble x2"></div>
-        <div class="bubble x3"></div>
-        <div class="bubble x4"></div>
-        <div class="bubble x5"></div>
-        <div class="bubble x6"></div>
-        <div class="bubble x7"></div>
-        <div class="bubble x8"></div>
-        <div class="bubble x9"></div>
-        <div class="bubble x10"></div>
-    </div>
     <div id="navbar">
         <a href="stem.html">STEM資訊</a>
         <a href='game.html'>網上遊戲</a>
         <a href="comment.html">留言板</a>
+        <img src="HongCity_logo.png" alt="logo" width="50px" height="50px" style="float:right; margin: 0 10px 0 10px;">
+
     </div>
     <div id="intro">
         <h1>香城嘉年華</h1>
